Home page for operations & selectors

--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,6 +1,9 @@
 .navList {
   list-style: none;
   display: flex;
-  width: 70%;
-  justify-content: space-between;
+  width: 100%;
+  justify-content: space-evenly;
+  background: black;
+  margin: 0 auto;
+  padding: 20px;
 }
